[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
authors = ["boris.lok <boris.lok.tw@outlook.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
num = "0.4.0"

[dev-dependencies]
rand = "0.8.5"
